챕터2 단위 테스트 까지 완료(junit4 -> junit5 로 전환해서 사용하고있음)

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ Mask: .idea
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**
 
 # Generated files
 .idea/**/contentModel.xml
