--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ repositories {
 }
 
 dependencies {
+    /* spring-boot */
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+    /* lombok */
+    compileOnly("org.projectlombok:lombok")
 }
