--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,11 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
     /* lombok */
-    compileOnly("org.projectlombok:lombok")
+    compileOnly('org.projectlombok:lombok')
+
+    /* springDataJqa */
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+
+    /* H2 */
+    compile('com.h2database:h2')
 }
