챕터4 template mustache 까지 완료

--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,7 @@ dependencies {
 
     /* H2 */
     compile('com.h2database:h2')
+
+    /* mustache */
+    compile('org.springframework.boot:spring-boot-starter-mustache')
 }
