--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ local.properties
 # Typically, this file would be tracked if it contains build/dependency configurations:
 #.project
 
+application-oauth.yml
