챕터5 테스트 리팩토링까지 완료

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,9 +8,13 @@ spring:
     include: oauth
 
   jpa:
-    hibernate:
-      ddl-auto: create
     show-sql: true
 
-  #session:
-    #store-type: jdbc
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: test
+            client-secret: test
+            scope: profile,email
