--- a/build.gradle
+++ b/build.gradle
@@ -44,4 +44,8 @@ dependencies {
 
     /* security */
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+    testCompile('org.springframework.security:spring-security-test')
+
+    /* session jdbc */
+    //compile('org.springframework.session:spring-session-jdbc')
 }
