--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     /* lombok */
     compileOnly('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
 
     /* springDataJqa */
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
