--- a/build.gradle
+++ b/build.gradle
@@ -48,5 +48,8 @@ dependencies {
     testCompile('org.springframework.security:spring-security-test')
 
     /* session jdbc */
-    //compile('org.springframework.session:spring-session-jdbc')
+    compile('org.springframework.session:spring-session-jdbc')
+
+    /* mariaDB */
+    compile('org.mariadb.jdbc:mariadb-java-client')
 }
