--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
 
     /* H2 */
-    compile('com.h2database:h2')
+    //compile('com.h2database:h2')
 
     /* mustache */
     compile('org.springframework.boot:spring-boot-starter-mustache')
