--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ group 'org.example'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 11
 
+bootJar {
+    mainClassName('org.example.bootaws.Application')
+}
+
 repositories {
     mavenCentral()
     jcenter()
