--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,16 @@
 spring:
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/awsdb
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
   profiles:
-    include: oauth
+    include: real-oauth
 
   jpa:
-    hibernate:
-      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
+  h2:
+    console:
+      enabled: true
 
   session:
     store-type: jdbc
