--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ script: "./gradlew clean build"
 
 # CI 실행 완료 시 메일로 알람
 notifications:
-  emial:
+  email:
     recipients:
       - hellohj_@naver.com
