--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-languege: java
+language: java
 jdk:
   - openjdk11
 
@@ -14,7 +14,7 @@ cache:
 
 script: "./gradlew clean build"
 
-# CI 실행 완료 시 메일로 알람수행
+# CI 실행 완료시 메일로 알람
 notifications:
   email:
     recipients:
