--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,17 @@ deploy:
     local_dir: deploy
     wait-until-deployed: true
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: boot-aws-build-jar
+    key: boot-aws.zip
+    bundle_type: zip
+    application: boot-aws
+    deployment_group: boot-aws-group
+    region: ap-northeast-2
+    wait-until-deployed: true
+
 # CI 실행 완료시 메일로 알람
 notifications:
   email:
