--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,13 @@ before_install:
   - chmod +x gradlew
 
 before_deploy:
-  - zip -r boot-aws *
   - mkdir -p deploy
-  - mv boot-aws.zip deploy/boot-aws.zip
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/boot-aws.zip
 
 deploy:
   - provider: s3
