--- a/appspec.yml
+++ b/appspec.yml
@@ -13,6 +13,6 @@ permissions:
 
 hooks:
   AfterInstall:
-    - location: deployh.sh
+    - location: deploy.sh
       timeout: 60
       runas: ec2-user
