deploy 덮어쓰기 관련 쉘 스크립트 추가

--- a/appspec.yml
+++ b/appspec.yml
@@ -12,6 +12,10 @@ permissions:
     group: ec2-user
 
 hooks:
+  BeforeInstall:
+    - location: before-install.sh
+      timeout: 60
+      runas: ec2-user
   ApplicationStart:
     - location: deploy.sh
       timeout: 60
